Fixed redundant scrollbars

--- a/app/coach/coach-game/styles.less
+++ b/app/coach/coach-game/styles.less
@@ -18,6 +18,9 @@ breakdown-text {
 
 .coach-game {
 
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     height: 100%;
 
     .tabbable {
@@ -26,8 +29,9 @@ breakdown-text {
     }
 
     .tab-content {
-        height: calc(~"100% - 84px");
-        overflow-y: scroll;
+        height: calc(~"100% - 78px");
+        overflow-y: auto;
+        padding-bottom: 5px;
     }
 
     .nav-tabs {
