--- a/app/coach/game-area/styles.less
+++ b/app/coach/game-area/styles.less
@@ -49,7 +49,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    overflow-y: scroll;
+    height: calc(~"100% - 51px");
     
     .game-area-game-information {
       position: relative;
